<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/contact_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Building Name"
                android:inputType="text" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_username"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/committeeRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="House Committee Manager" />

                <RadioButton
                    android:id="@+id/tenantRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tenant" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_contact_submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/radioGroup"
                android:layout_marginTop="10dp"
                android:text="Submit" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@drawable/default_background">-->
<!--    <RelativeLayout-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent">-->

<!--        <EditText-->
<!--            android:id="@+id/contact_username"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Enter Your Building Name"-->
<!--            android:inputType="text"/>-->

<!--        <RadioGroup-->
<!--            android:id="@+id/radioGroup"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/contact_username"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="20dp">-->

<!--            <RadioButton-->
<!--                android:id="@+id/committeeRadioButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="House Committee Manager" />-->

<!--            <RadioButton-->
<!--                android:id="@+id/tenantRadioButton"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Tenant" />-->

<!--        </RadioGroup>-->
<!--        <Button-->
<!--            android:id="@+id/add_contact_submitBtn"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@id/radioGroup"-->
<!--            android:text="Submit"/>-->

<!--    </RelativeLayout>-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->