...
    android:background="@drawable/opening_screen"
    tools:context=".OpeningScreen">

    <!-- Adjusted positions and margins for the buttons -->

    <Button
        android:id="@+id/lgnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="205dp"
...
