...
        app:drawableLeftCompat="@drawable/ic_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chatBtnAdmin"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="112dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
...
